--- a/Clock/public/Css/index.css
+++ b/Clock/public/Css/index.css
@@ -1,8 +1,8 @@
 @font-face 
 {
     font-family: 'digital-7_monomono';
-    src: url('./Fonts/digital7-webfont.woff2') format('woff2'),
-         url('./Fonts/digital7-webfont.woff2') format('woff');
+    src: url('./../Fonts/digital7-webfont.woff2') format('woff2'),
+         url('./../Fonts/digital7-webfont.woff2') format('woff');
     font-weight: normal;
     font-style: normal;
 
@@ -10,88 +10,23 @@
 
 body 
 {
-    background-color: rgba(0, 0, 0, 0.9);
     margin: 0px;
     user-select: none;
 }
 
 
-.leftBar
+.leftBar 
 {
-    display: none;
+    position: absolute;
+    left: 0px;
     height: 100%;
-    width: 50px;
-    background-color: rgba(100, 0, 0, 0.5);
+    width: 150px;
 }
 
-.leftBar img 
+.leftBarButton:hover 
 {
-    width: 50px;
-    margin-bottom: 200px;
+    background-color: whitesmoke !important;
 }
-
-.leftBar>.icon:hover 
-{
-    background-color: whitesmoke;
-}
-
-
-
-.icon
-{
-    height: 100px;
-    background-color: red;
-    margin-bottom: 50px;
-    padding-top: 50px;
-    cursor: pointer;
-}
-
-
-.leftBarExpanded
-{
-    display: none;
-    height: 100%;
-    width: 200px;
-    background-color: rgba(100, 0, 0, 0.5);
-    
-}
-.leftBarExpanded>.icon 
-{
-    height: 150px;
-    padding-left: 50px;
-    padding-bottom: 25px;
-}
-
-.leftBarExpanded>.icon img 
-{
-    width: 100px;
-    margin-bottom: 200px;
-}
-
-.leftBarExpanded>.icon:hover 
-{
-    background-color: whitesmoke;
-}
-
-.clockHeading
-{
-    font-family: monospace;
-    font-size: 30px;
-    width: 100px;
-    margin-left: -25px;
-    font-weight: bolder;
-    text-align: center;
-}
-
-.selected
-{   background-color: whitesmoke;}
-
-.adjust1
-{   transform: translateX(23px);}
-
-.adjust2
-{   transform: translateX(25px);}
-
 
 /* Clock Styling */
 .clock
