--- a/Clock/public/Css/index.css
+++ b/Clock/public/Css/index.css
@@ -41,6 +41,18 @@ body
     display: inline-block;
 }
 
+#zones
+{
+    margin-left: 700px;
+    margin-top: 10px;
+}
+
+.dropdown-menu
+{
+    max-height: 400px;
+    overflow-y: auto;
+}
+
 /* Clock Styling */
 .clock
 {
@@ -55,7 +67,7 @@ body
 
 .clock>.border
 {
-    margin-top: 50px;
+    margin-top: 30px;
     margin-left: 75px;
     height: 385px;
     width: 750px;
